--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,8 @@ uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.3
 websockets==14.1
-letta @ git+https://github.com/thelonejordan/letta.git
+letta==0.6.9
+langchain==0.3.14
+langchain-community==0.3.14
+langchain-openai==0.3.0
+langgraph==0.2.62
